--- a/index.html
+++ b/index.html
@@ -5,26 +5,45 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Picamera2 MJPEG Streaming Demo</title>
     <script>
-        function handleButtonPress() {
-            // Send a request to the server when the button is pressed
-            fetch('/button_pressed')
+        // Function to send a command to the server
+        function sendCommand(command) {
+            fetch(`/command/${command}`)
                 .then(response => {
                     if (response.ok) {
-                        console.log('Button press recorded!');
+                        console.log(`Command "${command}" sent successfully!`);
                     } else {
-                        console.error('Failed to record button press.');
+                        console.error(`Failed to send command "${command}".`);
                     }
                 })
                 .catch(error => {
                     console.error('Error:', error);
                 });
         }
+
+        // Capture keystrokes
+        document.addEventListener('keydown', (event) => {
+            switch (event.key) {
+                case 'ArrowUp':
+                    sendCommand('up');
+                    break;
+                case 'ArrowDown':
+                    sendCommand('down');
+                    break;
+                case 'ArrowLeft':
+                    sendCommand('left');
+                    break;
+                case 'ArrowRight':
+                    sendCommand('right');
+                    break;
+                default:
+                    console.log(`Unhandled key: ${event.key}`);
+            }
+        });
     </script>
 </head>
 <body>
     <h1>Picamera2 MJPEG Streaming Demo</h1>
     <img src="stream.mjpg" width="640" height="480" alt="Live Stream">
-    <br>
-    <button onclick="handleButtonPress()">Press Me!</button>
+    <p>Press an arrow key to send a command to the server.</p>
 </body>
 </html>
