--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
 <body>
     <h1>Picamera2 MJPEG Streaming Demo</h1>
-    <img class="rotate" src="stream.mjpg" width="640" height="480" alt="Live Stream">
+    <img class="rotate90" src="stream.mjpg" width="640" height="480" alt="Live Stream">
     <p>Press an arrow key to control the motors. Release the key to stop.</p>
 </body>
 
